--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.shader linguist-detectable=false
+*.mat.meta linguist-language=Java
+*.mat linguist-language=Java
+*.shader linguist-language=Java
