--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.mat.meta linguist-language=Java
-*.mat linguist-language=Java
-*.shader linguist-language=Java
+*.mat.meta linguist-language=Unity3D Asset
+*.mat linguist-language=Unity3D Asset
+*.shader linguist-language=Unity3D Asset
