--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.mat.meta linguist-language=Unity3D Asset
-*.mat linguist-language=Unity3D Asset
-*.shader linguist-language=Unity3D Asset
+*.mat.meta linguist-language=Unity3D
+*.mat linguist-language=Unity3D
+*.shader linguist-language=Unity3D
